--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -1,3 +1,9 @@
+.contentWidth{
+	width: 85%;
+}
+.articleWidth{
+	width: 70%;
+}
 .avatar{
 	width: 100%;
 	display: flex;
@@ -42,6 +48,7 @@
 }
 .info{
 	position: relative;
+	margin: 0 auto;
 
 	&::before, &::after{
 		content: '';
@@ -92,12 +99,38 @@
 	}
 }
 .works{
-	width: 83%;
 	margin: 0 auto;
 
 }
 .listWorks{
 	&-item{
 		margin-bottom: 4rem;
+	}
+}
+.listMoreWork{
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: space-between;
+	margin: 0 auto;
+
+	&-item{
+		width: 32%;
+		margin-bottom: 1.5rem;
+	}
+}
+.listMorePage{
+	display: flex;
+	flex-flow: row nowrap;
+	justify-content: space-between;
+
+	&-item{
+		width: 48%;
+	}
+}
+.main{
+	&-page{
+		padding-top: 4rem;
+		margin-left: auto;
+		margin-right: auto;
 	}
 }
