--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -7,3 +7,17 @@
 .bold{
 	font-weight: bold;
 }
+.alignCenter{
+	text-align: center;
+}
+.sr-only{
+	width: 1px;
+	height: 1px;
+	display: inline-block;
+	position: absolute;
+	padding: 0;
+	margin: -1px;
+	border: 0;
+	clip: rect(0 0 0 0);
+	overflow: hidden;
+}
