--- a/scss/_buttonLink.scss
+++ b/scss/_buttonLink.scss
@@ -9,10 +9,38 @@
 		border-radius: 1.5rem;
 		text-decoration: none;
 	}
-	&--works{
+	&--pageLinkOut{
+		display: inline-block;
+		background-color: white;
+		font-size: var(--font--medium);
+		font-weight: 500;
+		padding: 0.5rem 1rem;
+		border-radius: 1.5rem;
+		text-decoration: none;
+		transition: background 0.5s ease-in-out;
+		box-sizing: border-box;
+		
+		&:hover{
+			background-color: var(--green-eva);
+			color: white;
+			outline: white 1px solid;
+			outline-offset: -1px;
+		}
+	}
+	&--pageLinkOutEva{
+		color: var(--green-eva);
+	}
+	&--morePage{
+		width: 100%;
+		height: 100%;
 		display: block;
 		color: var(--gray-900);
+		font-size: var(--font-medium);
+		font-weight: 500;
 		text-decoration: none;
+	}
+	&--works{
+		color: var(--gray-900);
 	}
 	&--works:hover{
 		text-decoration: underline;
