--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -2,25 +2,33 @@
 	font-family: 'Roboto';
 }
 .h2{
-	display: flex;
-	justify-content: center;
-	align-items: center;
+	&--dots{
+		display: flex;
+		justify-content: center;
+		align-items: center;
 
-	&::before, &::after{
-		content:'';
-		width: 0.4rem;
-		height: 0.4rem;
-		display: inline-block;
-		background: var(--cyan-500);
-		border-radius: 50%;
-		margin: 0 0.5rem;
+		&::before, &::after{
+			content:'';
+			width: 0.4rem;
+			height: 0.4rem;
+			display: inline-block;
+			background: var(--cyan-500);
+			border-radius: 50%;
+			margin: 0 1rem;
+		}
 	}
 
 	&--works{
-		margin-top: -1rem;
+		margin-top: -1.6rem;
 	}
 }
 .font{
+	&-xxLarge{
+		font-size: var(--font-xxLarge);
+	}
+	&-xLarge{
+		font-size: var(--font-xLarge);
+	}
 	&-large{
 		font-size: var(--font-large);
 	}
@@ -47,6 +55,9 @@
 	}
 	&-cyan500{
 		color: var(--cyan-500);
+	}
+	&-white{
+		color: white;
 	}
 }
 .text{
