--- a/scss/_var.scss
+++ b/scss/_var.scss
@@ -1,13 +1,13 @@
 :root{
-	--font-xxLarge: 2.5rem;
-	--font-xxLarge-xs: 2.25rem;
+	--font-xxLarge: 3rem;
 	--font-xLarge: 2rem;
-	--font-xLarge-xs: 1.75rem;
-	--font-large: 1.5rem;
+	--font-large: 1.8rem;
 	--font-medium: 1.125rem;
 	--font-small: 0.875rem;
 	--gray-900: #000000;
 	--gray-500: #767676;
 	--gray-200: #CCCCCC;
 	--cyan-500: #62BA9A;
+	--green-eva: #4B7D6B;
 }
+
