--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,8 +7,14 @@
 @import 'layout';
 @import 'nav';
 @import 'img';
+@import 'article';
+@import 'tab';
+@import 'header';
+@import 'lightbox';
+@import 'breakpoint';
 
-html{
+html, body{
+	position: relative;
 	font-size: 16px;
 }
 
@@ -19,6 +25,6 @@ body{
 	line-height: 1.5;
 }
 #wrap{
-	max-width: 1200px;
+	width: 100%;
 	margin:0 auto;
 }
