--- a/scss/_tab.scss
+++ b/scss/_tab.scss
@@ -44,6 +44,13 @@
 		transition: opacity 0.5s ease-in-out;
 		z-index: 0;
 	}
+	&-item:nth-child(2){
+		.img{
+			max-width: 22.5rem;
+			margin-left: auto;
+			margin-right: auto;
+		}
+	}
 	&-item.active{
 		opacity: 1;
 		z-index: 5;
