--- a/scss/_buttonLink.scss
+++ b/scss/_buttonLink.scss
@@ -27,8 +27,29 @@
 			outline-offset: -1px;
 		}
 	}
+	&--pageLinkOutBottom{
+		display: inline-block;
+		background-color: var(--green-eva);
+		font-size: var(--font--medium);
+		font-weight: 500;
+		padding: 0.5rem 1rem;
+		border-radius: 1.5rem;
+		text-decoration: none;
+		transition: background 0.5s ease-in-out;
+		box-sizing: border-box;
+		
+		&:hover{
+			background-color: white;
+			color: var(--green-eva);
+			outline:  var(--green-eva) 1px solid;
+			outline-offset: -1px;
+		}
+	}
 	&--pageLinkOutEva{
 		color: var(--green-eva);
+	}
+	&--pageLinkOutEvaBottom{
+		color: white;
 	}
 	&--morePage{
 		width: 100%;
