--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -9,3 +9,12 @@
 		background-color: var(--green-eva);
 	}
 }
+.nav{
+	&-item{
+		color: var(--gray-900);
+		text-decoration: none;
+	}
+	&-page{
+		color:white;
+	}
+}
