--- a/scss/_lightbox.scss
+++ b/scss/_lightbox.scss
@@ -1,7 +1,7 @@
-.lightbox{
+#lightbox{
 	display: none;
 	z-index: -1;
-	
+
 	&:target{
 		width: 100%;
 		height: 100%;
@@ -13,9 +13,11 @@
 		background-color: rgba(0,0,0,.8);
 		z-index: 20;
 	}
-
+}
+.lightbox{
 	&-content{
 		width: 80%;
+		margin-top: 2.5rem;
 	}
 
 	&-close{
@@ -24,7 +26,7 @@
 		display: block;
 		background: url(../images/icon-close.svg) no-repeat 0 0;
 		background-size: 100%;
-		position: absolute;
+		position: fixed;
 		top: 2rem;
 		right: 2rem;
 	}
