--- a/scss/_breakpoint.scss
+++ b/scss/_breakpoint.scss
@@ -57,10 +57,7 @@ $xlBreakpoint: 1440px;
 	.articleWidth{
 		width: 65%;
 	}
-	.lightbox{
-		&-content{
-			width: 65%;
-			margin-top: 0;
-		}
+	.tabsContent{
+		width: 80%;	
 	}
 }
