--- a/scss/_lightbox.scss
+++ b/scss/_lightbox.scss
@@ -5,21 +5,16 @@
 	&:target{
 		width: 100%;
 		height: 100%;
-		display: flex;
-		justify-content: center;
-		position: absolute;
+		display: block;
+		background-color: rgba(0,0,0,.8);
+		position: fixed;
 		top: 0;
 		left: 0;
-		background-color: rgba(0,0,0,.8);
+		overflow-y: auto;
 		z-index: 20;
 	}
 }
 .lightbox{
-	&-content{
-		width: 80%;
-		margin-top: 2.5rem;
-	}
-
 	&-close{
 		width: 2rem;
 		height: 2rem;
@@ -29,5 +24,6 @@
 		position: fixed;
 		top: 2rem;
 		right: 2rem;
+		z-index: 15;
 	}
 }
