--- a/scss/_var.scss
+++ b/scss/_var.scss
@@ -1,7 +1,7 @@
 :root{
 	--font-xxLarge: 3rem;
 	--font-xLarge: 2rem;
-	--font-large: 1.8rem;
+	--font-large: 1.6rem;
 	--font-medium: 1.125rem;
 	--font-small: 0.875rem;
 	--gray-900: #000000;
@@ -9,5 +9,6 @@
 	--gray-200: #CCCCCC;
 	--cyan-500: #62BA9A;
 	--green-eva: #4B7D6B;
+	--red-fhtrust: #B81C2B;
 }
 
