--- a/scss/_breakpoint.scss
+++ b/scss/_breakpoint.scss
@@ -48,8 +48,107 @@ $xlBreakpoint: 1440px;
 			width: 100%;
 		}
 	}
+	.header{
+		&--index{
+			width: 100% !important;
+		}
+	}
+}
+@include lg-breakpoint {
+	.index{
+		padding-top: 5rem;
+	}
 	.nav{
-		display: none;
+		width: auto;
+		background: none;
+		position: absolute;
+		right: 0;
+		top: 5.4rem;
+		display: flex;
+		flex-flow: row nowrap;
+		justify-content: flex-end;
+		padding: 0;
+		transform: translateX(10%);
+		transition: all 0.5s ease-in-out;
+	
+		&.open{
+			right: 3.2rem;
+			transform: translateX(0);
+		}
+	
+		&-item{
+			display: inline-block;
+			padding: 0;
+			margin-right: 1rem;
+			font-size: 1rem;
+			font-weight: 400;
+		}
+	}
+	.header{
+		&--index{
+			height: auto;
+			position: relative;
+			padding-top: 0;
+			margin-left: auto;
+			margin-right: auto;
+		}
+	}
+	.navToggle{
+		width: 2.5rem;
+		height: 2rem;
+		display: block;
+		position: absolute;
+		top: 5rem;
+		right: 1.2rem;
+		overflow: hidden;
+		border-radius: 4px;
+		z-index: 10;
+	
+		&::before, &::after{
+			content: '';
+			width: 80%;
+			height: 0.1875rem;
+			display: block;
+			background-color: var(--gray-900);
+			position: absolute;
+			left: 50%;
+			margin-left: -40%;
+			transition: all 0.3s ease-in-out;
+		}
+
+		&::before{
+			top: 0;
+		}
+
+		&::after{
+			bottom: 0;
+		}
+	
+		&-hamburger{
+			width: 100%;
+			height: 0.1875rem;
+			display: block;
+			background-color: var(--gray-900);
+			position: absolute;
+			top: calc(50% - 0.09375rem);
+			border-radius: 16px;
+			transition: transform 0.3s ease-in-out;
+		}
+	
+		&.open .navToggle-hamburger{
+			transform: translateX(25%);
+		}
+		&.open::before{
+			transform: rotate(-45deg);
+			top: 30%;
+		}
+		&.open::after{
+			transform: rotate(45deg);
+			top: 60%;
+		}
+		&.open::before, &.open::after{
+			width: 40%;
+		}
 	}
 }
 
