--- a/scss/_lightbox.scss
+++ b/scss/_lightbox.scss
@@ -25,5 +25,9 @@
 		top: 2rem;
 		right: 2rem;
 		z-index: 15;
+		transition: transform 0.5s ease-in-out;
+	}
+	&-close:hover{
+		transform: rotate(180deg);
 	}
 }
