--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -1,18 +1,90 @@
 .nav{
+	width: 100%;
+	background: rgba(255,255,25);
 	position: absolute;
-	right: 0;
-	top: 6rem;
+	top: 0;
+	left: 0;
 	display: flex;
-	flex-flow: row nowrap;
+	flex-flow: column nowrap;
+	opacity: 0;
+	z-index: 5;
+	padding: 5rem 0 3rem 0;
+	transition: all 0.5s ease-in-out;
+
+	&.open{
+		opacity: 1;
+	}
 
 	&-item{
 		display: inline-block;
+		padding: 1rem 0;
 		margin-right: 1rem;
+		color: var(--gray-900);
+		font-size: var(--font-medium);
+		font-weight: 500;
+		text-decoration: none;
+		text-align: center;
 	}
 
 	&-page{
 		width: 100%;
 		color:white;
 		text-align: right;
+	}
+}
+.navToggle{
+	width: 2.5rem;
+	height: 2rem;
+	display: block;
+	position: absolute;
+	top: 2rem;
+	right: 1.2rem;
+	overflow: hidden;
+	border-radius: 4px;
+	z-index: 10;
+
+
+	&::before, &::after{
+		content: '';
+		width: 80%;
+		height: 0.1875rem;
+		display: block;
+		background-color: var(--gray-900);
+		position: absolute;
+		left: 50%;
+		margin-left: -40%;
+		transition: all 0.3s ease-in-out;
+	}
+	&::before{
+		top: 0;
+	}
+	&::after{
+		bottom: 0;
+	}
+
+	&-hamburger{
+		width: 100%;
+		height: 0.1875rem;
+		display: block;
+		background-color: var(--gray-900);
+		position: absolute;
+		top: calc(50% - 0.09375rem);
+		border-radius: 16px;
+		transition: transform 0.3s ease-in-out;
+	}
+
+	&.open .navToggle-hamburger{
+		transform: translateX(100%);
+	}
+	&.open::before{
+		transform: rotate(45deg);
+		top: 50%;
+	}
+	&.open::after{
+		transform: rotate(-45deg);
+		top: 50%;
+	}
+	&.open::before, &.open::after{
+		width: 100%;
 	}
 }
