--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -19,4 +19,10 @@
 	&--fhtrust{
 		background-color: var(--red-fhtrust);
 	}
+	&--esun{
+		background-color: var(--green-esun);
+	}
+	&--udn{
+		background-color: var(--orange-udn);
+	}
 }
