--- a/scss/_var.scss
+++ b/scss/_var.scss
@@ -9,6 +9,8 @@
 	--gray-200: #CCCCCC;
 	--cyan-500: #62BA9A;
 	--green-eva: #4B7D6B;
+	--green-esun: #00A99D;
 	--red-fhtrust: #B81C2B;
+	--orange-udn: #F16D23;
 }
 
