--- a/scss/_breakpoint.scss
+++ b/scss/_breakpoint.scss
@@ -51,6 +51,11 @@ $xlBreakpoint: 1440px;
 			width: 100%;
 		}
 	}
+	.listWorks{
+		&-item{
+			margin-bottom: 6rem;
+		}
+	}
 	.header{
 		&--index{
 			width: 100% !important;
